hmw-02/Ejercicio1-ObtenerIP.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.19.4
    command: [ "sh", "-c"]
    args:
    - while true; do
          echo -IP DEL POD '\n';
          printenv MY_POD_IP;
          sleep 10;
      done;
    resources:
      requests:
        memory: "256Mi"
        cpu: "100m"
      limits:
        memory: "256Mi"
        cpu: "100m"
