hmw-02/Service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxreps
spec:
  selector:
    app: nginxreps
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9376
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 192.0.2.127
