hmw-02/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxreps
spec:
  selector:
    app: nginxreps
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8085
  type: ClusterIP
