hmw-02/service3.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxreps
spec:
  type: NodePort
  selector:
    app: nginxreps
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30007
