hmw-02/serviceBlueGreenv.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    run: nginx
    version: 0.0.1
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
