hmw-02/test-bluegreen.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  annotations:
    haproxy.org/path-rewrite: /
spec:
  selector:
    run: nginx
    version: 0.0.2
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
