hmw-02/ingressBlueGreenv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  rules:
   - host: ad.rodriguez.student.lasalle.com
     http: 
      paths:
      - path: "/estudy/lasalle/"
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
