hmw-02/ingressBlueGreenvV2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  rules:
     http: 
      paths:
      - path: "/estudy/lasalle/"
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
        backend:
          serviceName: test-service
          servicePort: 80
